fixed contrast issue for register page, uncentered some text

--- a/capvenv/roguelists/rogueapp/static/rogueapp/css/styles.css
+++ b/capvenv/roguelists/rogueapp/static/rogueapp/css/styles.css
@@ -260,7 +260,10 @@ a,
 .card-body {
   height: fit-content;
   padding-bottom: 0;
-  text-align: center;
+}
+
+.card-body p {
+  text-align: left;
 }
 
 .card-text {
